packages/jsii/test/negatives/neg.class-name.1.ts
///!MATCH_ERROR: Type names cannot use an underscore: My_class

export class My_class {

}
